feat: merchant dashboard
